--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "kerberos": "~0.0.x",
     "parse": "~1.8.0",
     "parse-server": "~2.2.2",
-    "cors": "*"
+    "cors": "*",
+    "moment": "*"
   },
   "scripts": {
     "start": "node index.js"
